css/plugin-wrap.less
.dokuwiki {


    div.wrap_round {
        border-radius: 3px;
    }

    div.wrap_box,
    div.wrap_info,
    div.wrap_tip,
    div.wrap_important,
    div.wrap_alert,
    div.wrap_help,
    div.wrap_download,
    div.wrap_todo {
        padding: 0.5em 1em 0.25em 1em;

        border-left: 5px solid @ini_highlight;
        background-color: @ini_accent;
        background: linear-gradient(-45deg, @ini_accent, transparent);
    }

    // original background colors darkened
    div.wrap_tip {
        border-color: darken(#fff79f, 50%);
        background: linear-gradient(-45deg, #fff79f, transparent);
    }

    div.wrap_important {
        border-color: darken(#ffd39f, 50%);
        background: linear-gradient(-45deg, #ffd39f, transparent);
    }

    div.wrap_alert {
        border-color: darken(#ffbcaf, 50%);
        background: linear-gradient(-45deg, #ffbcaf, transparent);
    }

    div.wrap_help {
        border-color: darken(#dcc2ef, 50%);
        background: linear-gradient(-45deg, #dcc2ef, transparent);
    }

    div.wrap_download {
        border-color: darken(#d6efc2, 50%);
        background: linear-gradient(-45deg, #d6efc2, transparent);
    }

    div.wrap_todo {
        border-color: darken(#c2efdd, 50%);
        background: linear-gradient(-45deg, #c2efdd, transparent);
    }
}

